reflectapi-demo/tests/errors/hidden_on_newtype_struct_field.rs
#[derive(serde::Deserialize, reflectapi::Input)]
struct MyNewtype(
    #[reflectapi(hidden)]
    String,
);

fn main() {}
