reflectapi-demo/tests/errors/hidden_on_newtype_struct_field.stderr
error: `hidden` cannot be used on unnamed (tuple) fields because removing a positional element shifts indices and breaks wire compatibility in generated clients
 --> tests/errors/hidden_on_newtype_struct_field.rs:3:5
  |
3 |     #[reflectapi(hidden)]
  |     ^
